--- a/digital_events_repository/web/index.xhtml
+++ b/digital_events_repository/web/index.xhtml
@@ -12,61 +12,77 @@
     </h:head>
 
     <h:body>
-        <div class="d-flex align-content-center flex-wrap">
-            <div class="container">
-                <div class="login-content">
-                    <div class="login-logo logo">
-                        <a href="index.xhtml">
-                            <img src="#{request.contextPath}/resources/img/logoNegro.png" alt="" class="" style=" padding-top: 10px; height: 100px; width: 200px;"/>
-                        </a>
-                    </div>
-                    <div class="login-form">
-                        <div class="row">
-                            <div class="col-md-12">
-                                <h:messages showDetail="true" styleClass="alert" style="list-style: none; padding: 0px; display: block" infoClass="alert-success" errorClass="alert-danger" />
-                            </div>
-                        </div>
-                        <h:form prependId="false">
-                            <div class="row d-flex justify-content-center mt-2">
-                                <div class="col-8">
-                                    <div class="form-group">
-                                        <label>Correo Electronico</label>
-                                        <h:inputText a:type="email" class="form-control"
-                                                     value="#{sessionController.email}"
-                                                     a:placeholder="usercorreo@ejemplo.com"
-                                                     a:required=""/>
-                                    </div>                
-                                    <div class="form-group">
-                                        <label>Contraseña</label>
-                                        <h:inputSecret class="form-control"
-                                                       value="#{sessionController.password}"
-                                                       a:placeholder="********"
-                                                       a:required=""/>
+        <div class="page-header header-filter" style="background-image: url('#{request.contextPath}/resources/img/adult-applause-audience-952437.jpg'); background-size: cover; background-position: top center;">
+            <div class="d-flex align-content-center flex-wrap">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-lg-4 col-md-6 ml-auto mr-auto" id="bajar-login">
+                            <div class="card card-login bg-wh">
+                                <div class=" card-header card-header-image text-center bg-red">
+                                    <a href="index.xhtml">
+                                        <img src="#{request.contextPath}/resources/img/logoNegro.png" style="height: 130px; width: 310px; padding: 5px;"/>
+                                    </a>
+                                </div>
+                                <br/>
+                                <div class="card-body">
+                                    <div class="row">
+                                        <div class="col-md-12">
+                                            <h:messages showDetail="true" styleClass="alert" style="list-style: none; padding: 0px; display: block" infoClass="alert-success" errorClass="alert-danger" />
+                                        </div>
                                     </div>
-                                    <div class="checkbox">
-                                        <label>
-                                            <input type="checkbox"/> Recordarme
-                                        </label>
-                                        <label class="pull-right">
-                                            <a href="#">¿Olvido su contraseña?</a>
-                                        </label>
+                                    <h:form prependId="false">
+                                        <span class="bmd-form-group">
+                                            <div class="input-group">
+                                                <div class="input-group-prepend">
+                                                    <span class="input-group-text">
+                                                        <i class="material-icons">mail</i>
+                                                    </span>
+                                                </div>
+                                                <h:inputText a:type="email" value="#{sessionController.email}" class="form-control" a:placeholder="Correo Electronico..." a:required=""/>
+                                            </div>
+                                        </span>
+                                        <br/>
+                                        <span class="bmd-form-group">
+                                            <div class="input-group">
+                                                <div class="input-group-prepend">
+                                                    <span class="input-group-text">
+                                                        <i class="material-icons">lock_outline</i>
+                                                    </span>
+                                                </div>
+                                                <h:inputSecret class="form-control" value="#{sessionController.password}" a:placeholder="Contraseña..." a:required=""/>
+                                            </div>
+                                        </span>
+                                        <br/>
+                                        <div class="form-check">
+                                            <label class="form-check-label">
+                                                <input class="form-check-input" type="checkbox"/> 
+                                                Recordarme
+                                                <span class="form-check-sign">
+                                                    <span class="check"></span>
+                                                </span>
+                                            </label>
 
-                                    </div>
-                                    <h:commandButton class="btn btn-success btn-flat m-b-30 m-t-30 btn-block" action="#{sessionController.startSession()}"
-                                                     value="Iniciar Sesion">
-                                    </h:commandButton>
-                                    <h:commandLink class="btn btn-info btn-flat m-b-30 m-t-30 btn-block" a:data-toggle="modal" a:data-target="#modalRegistro" rel="tooltip" >
-                                        <f:ajax render=":modalRegistroContent"/>
-                                        <span>Registrate Aqui</span>
-                                    </h:commandLink>
+                                            <label class="pull-right">
+                                                <a href="#">¿Olvido su contraseña?</a>
+                                            </label>
+                                        </div>
+
+                                        <div class="footer-row text-center">
+                                            <h:commandButton class="btn btn-info btn-link btn-wd btn-lg-" value="Registrarse" >
+                                                <div class="ripple-container"></div>
+                                            </h:commandButton> 
+                                            <h:commandButton class="btn btn-success btn-link btn-wd btn-lg-" action="#{sessionController.startSession()}" value="Iniciar Sesion">
+                                                <div class="ripple-container"></div>
+                                            </h:commandButton>
+                                        </div>
+                                    </h:form>
                                 </div>
                             </div>
-                        </h:form>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
-
+        </div>  
 
         <!--modal registro-->
         <div class="modal fade" id="modalRegistro" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
