1. MODIFIQUE LA VISTA DE LOGIN 2. MODIFIQUE EL BOTON DE CARGA MASIVA 3. INTENTO 2

--- a/digital_events_repository/web/index.xhtml
+++ b/digital_events_repository/web/index.xhtml
@@ -12,7 +12,7 @@
     </h:head>
 
     <h:body>
-        <div class="page-header header-filter" style="background-image: url('#{request.contextPath}/resources/img/adult-applause-audience-952437.jpg'); background-size: cover; background-position: top center;">
+        <div class="page-header header-filter" style="background-image: url('#{request.contextPath}/resources/img/personajes-transformers.png'); background-size: cover; background-position: top center;">
             <div class="d-flex align-content-center flex-wrap">
                 <div class="container">
                     <div class="row">
