--- a/digital_events_repository/web/SI/administrador/ventas/indexVentas.xhtml
+++ b/digital_events_repository/web/SI/administrador/ventas/indexVentas.xhtml
@@ -10,10 +10,116 @@
                 xmlns:p="http://primefaces.org/ui">
 
     <ui:define name="content">
+        <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+            <ol class="carousel-indicators">
+                <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+            </ol>
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img class="d-block w-100" src="#{request.contextPath}/resources/img/personajes-transformers.png" style="width: 250px; height: 550px;"/>
+                    <div class="carousel-caption d-none d-md-block">
+                        <h2><strong>TRANSFORMERS Y LOS VENGADORES</strong></h2>
+                        <h4>Fiestas Infantiles Tematicas: Optimus Prime, BumbleBee, Capitan America y IronMan pueden ser parte de tu fiesta</h4>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img class="d-block w-100" src="#{request.contextPath}/resources/img/coco-paw-patrol.png" style="width: 250px; height: 550px;"/>
+                </div>
+                <div class="carousel-item">
+                    <img class="d-block w-100" src="#{request.contextPath}/resources/img/dinosaurios.png" style="width: 250px; height: 550px;"/>
+                    <div class="carousel-caption d-none d-md-block">
+                        <h2><strong>¡UN MUNDO INCREIBLE!</strong></h2>
+                        <h4>Las mejores atracciones con tecnologia de punta para que tus celebraciones sean unicas</h4>
+                    </div>
+                </div>
+            </div>
+            <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+            </a>
+        </div>
+
+        <br/>
+
+        <div class="row">
+            <div class="col-sm-6">
+                <div class="card card-blog">
+                    <div class="card-header card-header-image">
+                        <div id="carouselExampleIndicators1" class="carousel slide" data-ride="carousel">
+                            <ol class="carousel-indicators">
+                                <li data-target="#carouselExampleIndicators1" data-slide-to="0" class="active"></li>
+                                <li data-target="#carouselExampleIndicators1" data-slide-to="1"></li>
+                                <li data-target="#carouselExampleIndicators1" data-slide-to="2"></li>
+                            </ol>
+                            <div class="carousel-inner">
+                                <div class="carousel-item active">
+                                    <img class="d-block w-100" src="#{request.contextPath}/resources/img/personajes-transformers.png" style="width: auto; height: 300px;"/>
+                                </div>
+                                <div class="carousel-item">
+                                    <img class="d-block w-100" src="#{request.contextPath}/resources/img/coco-paw-patrol.png" style="width: auto; height: 300px;"/>
+                                </div>
+                                <div class="carousel-item">
+                                    <img class="d-block w-100" src="#{request.contextPath}/resources/img/dinosaurios.png" style="width: auto; height: 300px;"/>
+                                </div>
+                            </div>
+                            <a class="carousel-control-prev" href="#carouselExampleIndicators1" role="button" data-slide="prev">
+                                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                <span class="sr-only">Previous</span>
+                            </a>
+                            <a class="carousel-control-next" href="#carouselExampleIndicators1" role="button" data-slide="next">
+                                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                <span class="sr-only">Next</span>
+                            </a>
+                        </div>
+                        <div class="card-title">
+                            Este inicio de año será asombroso...
+                        </div>
+                    </div>                    
+                    <div class="card-body">
+                        <h6 class="card-category text-info">Fashion</h6>
+                        <p class="card-description">
+                            Don&apos;t be scared of the truth because we need to restart the human foundation in truth And I love you like Kanye loves Kanye I love Rick Owens&#x2019; bed design but the back is...
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-6">
+                <div class="card card-blog">
+                    <div class="card-header card-header-image">
+                        <a href="#pablo">
+                            <img class="img" src="#{request.contextPath}/resources/img/adult-band-crowd-348517.jpg"/>
+                            <div class="card-title">
+                                This Summer Will be Awesome
+                            </div>
+                        </a>
+                    </div>
+                    <div class="card-body">
+                        <h6 class="card-category text-info">Fashion</h6>
+                        <p class="card-description">
+                            Don&apos;t be scared of the truth because we need to restart the human foundation in truth And I love you like Kanye loves Kanye I love Rick Owens&#x2019; bed design but the back is...
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
 
 
 
-    </ui:define>
+
+
+
+
+
+
+
+
+    </ui:define>    
 
 
 
