--- a/digital_events_repository/web/SI/coordinador/eventos/eventos.xhtml
+++ b/digital_events_repository/web/SI/coordinador/eventos/eventos.xhtml
@@ -9,49 +9,96 @@
                 xmlns:a="http://xmlns.jcp.org/jsf/passthrough"
                 xmlns:p="http://primefaces.org/ui">
 <ui:define name="scripts-grafricos">    
-        <script>
-            var mesesEventos = [#{grafricoEventosController.graficoEventos(grafricoEventosController.mesesEvento, ",")}];
-            var cuentaEventos = [#{grafricoEventosController.graficoEventos(grafricoEventosController.cuentaEventos, ",")}];
-            var tipoEventos = [#{grafricoEventosController.graficoEventos(grafricoEventosController.tipoEvento, ",")}];
-            window.onload = function ()
-            {
-                zingchart.render
-                        ({
-                            id: "myChartEventos",
-                            width: "100%",
-                            height: 300,
-                            data:
-                                    {
-                                        "type": "bar",
-                                        "title":
-                                                {
-                                                    "text": "Grafico Eventos"
-                                                },
-                                        "scale-x":
-                                                {
-                                                    "labels": mesesEventos
-                                                },
-                                        "plot":
-                                                {
-                                                    "value-box": {
-                                                        "text": tipoEventos
-                                                    },
-                                                    "line-width": 1
-                                                },
+       <script type="text/javascript">
+            var chart;
 
-                                        "tooltip": {
-                                            "text": tipoEventos
-                                        },
-                                        "series":
-                                                [
-                                                    {
-                                                        "values": cuentaEventos
-                                                    }
-                                                ]
-                                    }
-                        });
-            };
+            function updateDatos(cuentasCDT) {
+                chart.options.data[0].dataPoints = cuentasCDT;
+                chart.render();
+            }
+            function toggleDataSeries(e) {
+                if (typeof (e.dataSeries.visible) === "undefined" || e.dataSeries.visible) {
+                    e.dataSeries.visible = false;
+                } else {
+                    e.dataSeries.visible = true;
+                }
+                e.chart.render();
+            }
+            $(document).ready(function () {
+                chart = new CanvasJS.Chart("myChartEventos", {
+                    animationEnabled: true,
+                    exportEnabled: true, 
+                    toolTip: {
+                        shared: true
+                    },
+                    legend: {
+                        cursor: "pointer",
+                        itemclick: toggleDataSeries
+                    }});
+                chart.options.axisY = {
+                    suffix: "",
+                    lineThickness: 2,
+                    title: 'TIPOS EVENTOS',
 
+                    scaleBreaks: {
+                        type: "wavy",
+                        customBreaks: [{
+                                startValue: 3,
+                                endValue: 4
+                            },
+                            {
+                                startValue: 3,
+                                endValue: 4
+                            }
+                        ]}
+
+                };
+                chart.options.title = {
+                   
+                };
+                seriesEmpresarial = {
+                    /*** Change type "column" to "bar", "area", "line" or "pie"***/
+                    type: "column",
+                    showInLegend: true,
+                    name: "{label}",
+                    indexLabel: "{labelDatos}",
+                    isIntermediateSum: true
+                };
+                seriesTematico = {
+                    /*** Change type "column" to "bar", "area", "line" or "pie"***/
+                    type: "column",
+                    showInLegend: true,
+                    name: "{label}",
+                    indexLabel: "{labelDatos}",
+                    isIntermediateSum: true
+                };
+                 seriesFiestaInfantil = {
+                    /*** Change type "column" to "bar", "area", "line" or "pie"***/
+                    type: "column",
+                    showInLegend: true,
+                    name: "{label}",
+                    indexLabel: "{labelDatos}",
+                    isIntermediateSum: true
+                };
+                chart.options.data = [];
+                chart.options.data.push(seriesEmpresarial);
+                chart.options.data.push(seriesTematico);
+                chart.options.data.push(seriesFiestaInfantil);
+                seriesEmpresarial.dataPoints = #{grafricoEventosController.datosJsonEmpresarial};
+                seriesTematico.dataPoints = #{grafricoEventosController.datosJsonTematica};
+                seriesFiestaInfantil.dataPoints = #{grafricoEventosController.datosJsonInfantil};
+                chart.render();
+            });
+            function convertCanvasToImage(canvas) {
+                var $canvas = $("#container-canvas-1 canvas");
+                var data = $canvas[0].toDataURL("image/jpg");
+                console.log(data);
+                alert(data);
+                $("#imgPrb").attr("src", data);
+                var image = new Image();
+                image.src = data;
+                document.body.appendChild(image);
+            }
         </script>
     </ui:define>
     <ui:define name="content">
@@ -71,7 +118,7 @@
                                     </div>
                                 </div>
                                 <div class="card-body card-header card-chart card-header-success">
-                                    <div class="ct-chart" id="myChartEventos"></div>
+                                    <div class="ct-chart" id="myChartEventos" style="width: 100%; height: 300px;"></div>
                                 </div>
                             </h:form>
                         </div>
