--- a/digital_events_repository/web/SI/administrador/inventario/inventario.xhtml
+++ b/digital_events_repository/web/SI/administrador/inventario/inventario.xhtml
@@ -92,8 +92,8 @@
                                 <div class="card-header card-header-success colorc">
                                     <div class="row">
                                         <div class="col-6">
-                                            <h4 class="card-title">Grafico Estadistico Inventario</h4>
-                                            <p class="card-category">Aquí encontraras un grafrico estadistico en el cual se muestra la cantidad de materiales que se encuentran en buen estado.</p>
+                                            <h4 class="card-title">#{administrador_inventario.lbl_grafrico_inventario}</h4>
+                                            <p class="card-category">#{administrador_inventario.lbl_aqui_encontraras_grafrico}</p>
                                         </div>
 
                                     </div>
@@ -114,8 +114,8 @@
                                 <div class="card-header card-header-success colorc">
                                     <div class="row">
                                         <div class="col-6">
-                                            <h4 class="card-title">Inventario</h4>
-                                            <p class="card-category">Aquí encontraras los materiales que se encuentran en el almacen.</p>
+                                            <h4 class="card-title">#{administrador_inventario.lbl_materiales_1}</h4>
+                                            <p class="card-category">#{administrador_inventario.lbl_aqui_encontras}</p>
                                         </div>
                                         <div class="col-6">
                                             <h:commandLink class="card-category btn btn-danger btn-flat m-b-30 m-t-30" action="#{reportesController.export()}" value="PDF">
